Remove PrintGCDateStamps